# protein_properties

./: .gitignore  .gitmodules  LICENSE  README.md  bsub.yml  bsub_interactive.yml  bsub_jupyter.yml  bsub_rr.yml  hp_glyco_ratios.ipynb  pixi.toml  pyproject.toml  sync_pdb.sh  train_cv.ipynb  train_cv_glyco.ipynb  train_cv_sasa_bfactor.ipynb
bsub/: bsub.yml  bsub_emb.yml  bsub_interactive.yml  bsub_jupyter.yml  bsub_rr.yml  bsub_train.yml
checkpoints/: N_glyco_with_oversampling_best_cv.ckpt  N_glyco_wo_oversampling_best_cv.ckpt  O_glyco_with_oversampling_best_cv.ckpt  O_glyco_wo_oversampling_best_cv.ckpt  bfactor_best_cv.ckpt  bfactor_trained_on_OPUS_best_cv.ckpt  glyco_3class_best_cv.ckpt  sasa_best_cv.ckpt
configs/: baseline_config.yaml  bfactor_baseline_config.yaml  bfactor_config.yaml  cnn_config.yaml  cv_config.yaml  glyco.yaml  glyco_N.yaml  glyco_O.yaml  lstm_config.yaml
data/: data_download.txt  substitution_dict.json
data/DeepNGlyPred/: N-GlycositeAtlas_Independent.txt  NGLYDE_independent.txt  Positive samples from N-GlycositeAtlas_and negative samples from Deep_Loc nucleus mitochondrion subcellular localization.txt
data/LMNglyPred/: Glycobiology_NGlyDE_Independent_Positive_202_Negative_100.csv  Subash_August_8_2022_NGlyDE_Prot_T5_feature.txt  Test_Data_NGlycositeAtlas.csv  Train_Data_NGlycositeAtlas.csv
data/N_taherzadeh/: Datasets.csv
data/O_captor/: Ntest.fasta  Ntrain.fasta  Ptest.fasta  Ptrain.fasta
data/glyco/: bioembeddings.yml  glyco_all.fasta  mmseqs2_config.json  rr_glyco_all.fasta  rr_scores.tsv  rr_wscores_and_config_glyco_all.fasta.fai  rr_wscores_glyco_all.fasta
data/sasa/: CASP12_HHblits_sasa.fasta  class_weights_c10.pt  class_weights_c2.pt  new_test_final_pisces_sasa.fasta
results/cv_results/: OPUS_bfactor_cv.pickle  bfactor_cv.pickle  glyco_3class_cv_results.pkl  glyco_N_cv_nosamp_results.pkl  glyco_N_cv_results.pkl  glyco_O_cv_nosamp_results.pkl  glyco_O_cv_results.pkl  sasa_cv.pkl
src/: callback.py  callbacks.py  debug_model.ipynb  debug_model_glyco.ipynb  eval.py  feature_importance.ipynb  label_transfer.py  models.py  train.py  utils.py
src/N_glyco_pakhrin/: GlycoBiology_NGlycositeAtlas.ipynb  N_linked_GlycoBiology_NGlycositeAtlas.ipynb
src/O_glyco_pakhrin/: O-linked_prott5_testing.ipynb  requirements.txt  (+1 more)
test/: test_alignment.py  test_calculations.py  test_fasta.py
(+32 files in other folders)
