[tool.poetry]
name = "protein-properties"
version = "0.1.0"
description = ""
authors = ["CallMeMisterOwl <denizhasler@outlook.de>"]
readme = "README.md"
packages = [{include = "protein_properties"}]

[tool.poetry.dependencies]
python = "^3.10"
pytorch-lightning = "^2.0.2"
numpy = "^1.24.3"
pandas = "^2.0.1"
wandb = "^0.15.2"
scikit-learn = "^1.2.2"
jsonargparse = "^4.21.0"
h5py = "^3.8.0"
jupyter = "^1.0.0"
seaborn = "^0.12.2"
biotite = "^0.36.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
